--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
 		%svelte.head%
 	</head>
-	<body class="">
+	<body>
 		<div id="henry-portofolio">%svelte.body%</div>
 	</body>
 </html>
